WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154001
Crash when trying to chain to the old -[NSView setNeedsDisplayInRect:]
https://bugs.webkit.org/show_bug.cgi?id=154001
Summary
Crash when trying to chain to the old -[NSView setNeedsDisplayInRect:]
Anders Carlsson
Reported
2016-02-08 12:32:53 PST
Crash when trying to chain to the old -[NSView setNeedsDisplayInRect:]
Attachments
Patch
(3.99 KB, patch)
2016-02-08 12:35 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-02-08 12:35:54 PST
Created
attachment 270874
[details]
Patch
Anders Carlsson
Comment 2
2016-02-08 12:53:34 PST
Committed
r196267
: <
http://trac.webkit.org/changeset/196267
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug