Crash when trying to chain to the old -[NSView setNeedsDisplayInRect:] https://bugs.webkit.org/show_bug.cgi?id=154001 rdar://problem/24519975

Reviewed by Dan Bernstein.

If our replaced -[NSView setNeedsDisplayInRect:] is called before the old IMP has been initialized,
we can end up trying to call a null pointer.

Fix this by using method_exchangeImplementations instead of method_setImplementation, since the former is done
atomically.

* WebView/WebHTMLView.mm:
(-[NSView _web_setNeedsDisplayInRect:]):
(+[WebHTMLViewPrivate initialize]):
(setNeedsDisplayInRect): Deleted.

Canonical link: https://commits.webkit.org/172094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196267 268f45cc-cd09-0410-ab3c-d52691b4dbfc